--- a/src/components/schedule.css
+++ b/src/components/schedule.css
@@ -22,14 +22,14 @@
 }
 .workkk{
     font-family: 'Helvetica 93 Black Extended';
-    color:#fdfdfd;
+    color:#000000;
     display: flex;
     gap:1vmax;
     font-size: 5vmax;
 
 }
 .worktexttt{
-    background: var(--craft-gra, linear-gradient(98deg, #6D4AF9 1.01%, #A632CE 35.37%, #F81DC8 67.65%));
+    background: #81BC12;
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -51,12 +51,13 @@
     gap: 1vmax;
     /* border-radius: 372px; */
     border-radius: 2vmax;
-    background: linear-gradient(93deg, #2C34FF 4.64%, rgba(147, 48, 226, 0.95) 55.05%, rgba(255, 44, 196, 0.89) 106.51%);
-    box-shadow: 0px 0.637px 1.401px 0px rgba(142, 30, 255, 0.01), 0px 1.932px 4.25px 0px rgba(183, 30, 255, 0.04), 0px 5.106px 11.233px 0px rgba(116, 30, 255, 0.09), 0px 16px 35.2px 0px rgba(156, 30, 255, 0.30);
+    background-color: #81BC12;
+    /* background: linear-gradient(93deg, #2C34FF 4.64%, rgba(147, 48, 226, 0.95) 55.05%, rgba(255, 44, 196, 0.89) 106.51%);
+    box-shadow: 0px 0.637px 1.401px 0px rgba(142, 30, 255, 0.01), 0px 1.932px 4.25px 0px rgba(183, 30, 255, 0.04), 0px 5.106px 11.233px 0px rgba(116, 30, 255, 0.09), 0px 16px 35.2px 0px rgba(156, 30, 255, 0.30); */
 }
 
 .ctaaa{
-    color: #FFF;
+    color: #ffffff;
     font-family: 'Helvetica Neue Light';
     font-size: 1.5vmax;
     font-weight: 300;
@@ -72,7 +73,7 @@
 }
 .workkksubtext{
     text-align: center;
-    color: #FDFDFD;
+    color: #000000;
     font-family: 'Helvetica Neue Light';
     font-size: 2vmax;
     font-weight: 300;
