--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -5,15 +5,17 @@
   display: flex;
     height:10vh;
     justify-content: space-between;
-    color: azure;
-    background-color: #000;
-    padding: 4vh 4vw;
+    color: rgb(0, 0, 0);
+    background-color: #ffffff;
+    padding: 2vh 4vw;
     position: sticky;
     z-index: 2;
     top: 0;
   }
 .menu-icon {
     display: none;
+    color:#000000;
+
   }
   
 /* .navbaritems ul li:not(:last-child) {
@@ -29,7 +31,7 @@
     align-items: center;
 }
 .lista{
-    color: #FDFDFD;
+    color: #000000;
 }
 
 ul{
@@ -41,8 +43,8 @@ ul{
 }
 li{
     cursor: pointer;
-    color: #FDFDFD;
-    font-family: 'Helvetica Neue Light';
+    color: #000000;
+    font-family: 'Poppins';
     font-size: 1.2vmax;
     font-weight: 100;
     line-height: normal;
@@ -89,14 +91,16 @@ li{
       cursor: pointer;
       justify-content: center;
       align-items: center;
+      color: #0000;
+      fill:#000000;
     }
   
     .navbaritems {
       position: absolute;
       color: #e10753;
       right: 0;
-      top: 18vh;
-      background-color: #fdfdfd;
+      top: 14vh;
+      background-color: #000000;
       width: 0px;
       height: calc(100vh - 8vh);
       transition: all 0.3s ease-in;
@@ -120,11 +124,13 @@ li{
     }
   
     .navbaritems ul li {
-      color: #7bf10d;
-      /* margin-right: unset; */
+            /* margin-right: unset; */
       font-size: 1.9vmax;
       margin-top: 3vh;
 
+    }
+    .lista{
+      color: #81BC12;
     }
   }
   
@@ -149,6 +155,7 @@ li{
     object-fit: fill;
     width: 100%;
     height: auto;
+    cursor: pointer;
   }
   .logo{
     display: flex;
