--- a/src/components/servicesframer.css
+++ b/src/components/servicesframer.css
@@ -184,7 +184,12 @@
     color: #ffffff;
   }
   @media screen and (max-width:475px) {
-
+    .cardleft{
+      width: 80%;
+      height: 100%;
+      justify-content: center;
+    }
+ 
     .card-1, .card-2, .card-3, .card-4,.card-5, .card-6, .card-7,.card-8{
         height:100%;
         width: 100%;
@@ -204,7 +209,7 @@
       border-radius: 1.5vmax;
     }
     .imagecontainer{
-      width:50vw;
+      width:80vw;
       height:30vh;
       aspect-ratio: 100 / 80;
       overflow: hidden;
@@ -239,11 +244,11 @@
     
   }
     
-  .cardleft{
+  /* .cardleft{
     width: 50%;
     height: 100%;
     justify-content: center;
-  }
+  } */
   .carddivv{
     position: static !important;
 
